--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+h1 {
+    text-align: center;
+}
+
 #game-board {
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
@@ -32,4 +36,5 @@
     text-align: center;
     background-color: #4CAF50; /* Green */
     color: white;
+    outline: none;
 }
